[metadata]
name = random_object_id
version = 2.0.0
description = Generate a random MongoDB ObjectId.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxr/random-object-id
author = Max R
author_email = maxr@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = random test MongoDB mongo ObjectId

[options]
py_modules = random_object_id
python_requires = >=3.7

[options.entry_points]
console_scripts =
    random_object_id=random_object_id:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
